# Lander-AI

./: README.md  pyrightconfig.json
.agents/rules/: agents.md  ai.md  api.md  backend.md  design.md  frontend.md  playwright-test-healer.agent.md  playwright-test-planner.agent.md
.cursor/: rules  workflows
client/: package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: AnalysisResults.tsx  AnalyzeForm.tsx  ErrorMessage.tsx  Layout.tsx  ResultsSection.tsx
client/src/components/LandingScreen/: LandingScreen.tsx
client/src/components/ResultsScreen/: DiagnosticStat.tsx  InsightPanel.tsx  LoadingScreen.tsx  ManeuverCard.tsx  ResultsBackground.tsx  ScoreDial.tsx  (+5 more)
client/src/lib/: api.ts
client/src/types/: analysis.ts  ui.ts
server/: .dockerignore  .gitignore  Dockerfile  deploy_cloud_run.sh  pyproject.toml  requirements.txt  test_api.py  test_json.py  test_json_2.py
server/app/: main.py
server/app/api/routes/: analyze.py  health.py
server/app/core/: config.py  logging_config.py  metrics.py
server/app/middleware/: logging_middleware.py  rate_limiter.py  request_context.py
server/app/schemas/: analysis.py
server/app/services/: ai_analysis.py  renderer.py  response_cache.py  scoring.py  scraper.py  url_validator.py
server/app/services/extractors/: __init__.py  base.py  content_extractor.py  design_signals_extractor.py  experience_signals_extractor.py  models.py  structure_extractor.py
server/tests/: test_ai_analysis_prompt.py  test_ai_analysis_reliability.py  test_experience_signals_extractor.py
