[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.2",
    "google-genai>=1.68.0",
    "httpx>=0.28.1",
    "prometheus-client>=0.22.0",
    "prometheus-fastapi-instrumentator>=7.0.2",
    "python-dotenv>=1.2.2",
    "structlog>=25.1.0",
    "uvicorn[standard]>=0.42.0",
]
